--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,12 +2,21 @@
 .header {
     background-color: #2c323c;
     background-image: url(/assets/images/headerBG.jpg);
-    background-repeat: repeat;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     color: #fff;
     min-height: 400px;
     padding: 180px 20px;
-    padding-bottom: 140px;
+    padding-bottom: 90px;
     text-align: center;
+}
+
+.headerContainer {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 40px;
+    margin: 0 auto;
+    width: fit-content;
 }
 
 .header h1 {
