--- a/src/components/AvatarCards/AvatarCards.css
+++ b/src/components/AvatarCards/AvatarCards.css
@@ -13,19 +13,11 @@
     margin: 0 auto;
 }
 
-@media (min-width: 1100px) {
-    .container {
-        padding-left:100px;
-        padding-right: 100px;
-        width: 1100px;
-    }
-}
-
 .click-item {
     background-size: cover;
     background-position: 50%;
-    height: 170px;
-    width: 170px;
+    height: 150px;
+    width: 150px;
     margin: 8px 25px;
     border: 5px solid #f1f1f1;
     border-radius: 3px;
@@ -48,6 +40,18 @@
 .shake {
     -webkit-animation: shake .5s .0125s;
     animation: shake .5s .0125s;
+}
+
+@media (min-width: 1100px) {
+    .container {
+        padding-left:100px;
+        padding-right: 100px;
+        width: 1100px;
+    }
+    .click-item {
+        height: 170px;
+        width: 170px;
+    }
 }
 
 @-webkit-keyframes shake {
