--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,5 +24,21 @@
 .header h1 {
     margin: 0;
     margin-bottom: 30px;
-    font-size: 4rem;
+    font-size: 2rem;
+}
+
+.header h2 {
+    font-size: 1rem;
+}
+
+@media (min-width: 1100px) {
+    .header h1 {
+        margin: 0;
+        margin-bottom: 30px;
+        font-size: 3rem;
+    }
+    .header h2 {
+
+        font-size: 2rem;
+    }
 }
